--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,41 @@
-# Dependencies
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Build output
-dist/
-.next/
-out/
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# TypeScript
-*.tsbuildinfo
+# testing
+/coverage
 
-# Vite
-.vite/
+# next.js
+/.next/
+/out/
 
-# Environment
-.env
-.env.local
-.env.*.local
+# production
+/build
 
-# IDE / Editor
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-
-# OS
+# misc
 .DS_Store
-Thumbs.db
-*.Zone.Identifier
+*.pem
 
-# Logs & cache
-*.log
+# debug
 npm-debug.log*
-.npm
-.cache/
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-# Test / coverage
-coverage/
-.nyc_output/
+# env files (can opt-in for committing if needed)
+.env*
 
-# Misc
-*.local
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
